fix: wrap long log file path

--- a/src/resources/assets/scss/adminlte.scss
+++ b/src/resources/assets/scss/adminlte.scss
@@ -70,6 +70,10 @@ $red: #dc3545;
   }
 }
 
+.text-word-wrap {
+  overflow-wrap: anywhere;
+}
+
 .user-panel {
   padding: 1rem .5rem;
   margin: 0 -.5rem;
